--- a/fix.yaml
+++ b/fix.yaml
@@ -1,6 +1,5 @@
-name: security-finding-fix
-description: Selects a random Linear issue from team SAF with label "saf-finding" for the current repository, checks if already fixed, and either links the existing PR or implements a fix and submits a new PR
-
+name: "[Jonas] Fix Security Issue"
+description: Fixes a random Linear finding for the current repository
 triggers:
   - manual: {}
     context:
@@ -13,222 +12,64 @@ action:
   steps:
     - agent:
         prompt: |
-          You are a security engineer selecting a vulnerability finding to fix.
+          Select a vulnerability finding to fix.
 
-          CONTEXT:
-          - Repository: {{repository_name}} at {{repository_url}}
-          - Linear team SAF contains "[Finding]" issues with label "saf-finding"
-          - Each finding issue title includes the repository name
+          1. Fetch issues from Linear (team: "Ona AI Security Engineer", label: "saf-finding")
+          2. Filter to issues containing "{{repository_name}}" in title/description
+          3. If none found, report "No findings for {{repository_name}}" and STOP
+          4. Select one at random and report: "Selected [identifier]: [title]"
 
-          TASK:
+          If the list_issue tool returns an empty list, it could be that filtering by team or lable is brioken. In this case, query by repo name.
 
-          1. Fetch all finding issues from Linear:
-             - Use list_issues with team: "SAF", label: "saf-finding"
-             - Filter to issues where the title or description contains "{{repository_name}}"
-
-          2. If NO issues are found for this repository:
-             - Write to /tmp/selected-issue.json: {"status": "NO_ISSUES_FOUND"}
-             - Report: "No saf-finding issues found for {{repository_name}}. Aborting automation."
-             - STOP HERE
-
-          3. If issues ARE found:
-             - Select ONE issue at random from the list
-             - Write the selected issue to /tmp/selected-issue.json:
-               ```json
-               {
-                 "status": "ISSUE_SELECTED",
-                 "issue_id": "uuid",
-                 "issue_identifier": "SAF-123",
-                 "title": "issue title",
-                 "description": "full description",
-                 "cve_id": "CVE-XXXX-XXXXX",
-                 "affected_package": "package-name",
-                 "affected_version": "1.2.3",
-                 "fixed_version": "1.2.4",
-                 "file_locations": ["path/to/file.go"]
-               }
-               ```
-             - Report: "Selected issue [identifier]: [title]"
-
-          LINEAR TOOLS:
-          - list_issues: fetch findings (team: "SAF", label: "saf-finding")
+          Extract: issue_id, identifier, CVE ID, affected package/version, fixed version, file locations.
 
     - agent:
         prompt: |
-          You are a security engineer checking if a vulnerability has already been fixed.
+          Check if the selected vulnerability is already fixed.
 
-          CONTEXT:
-          - Repository: {{repository_name}} at {{repository_url}}
-          - Selected issue is in /tmp/selected-issue.json
+          1. Read affected files and dependency files for the vulnerable version
+          2. Search PRs (open and merged) for the CVE ID or package name
 
-          TASK:
+          If ALREADY FIXED:
+          - Identify the fixing PR
+          - Report: "Already fixed by PR #[number]"
 
-          1. Read /tmp/selected-issue.json
-             - If status is "NO_ISSUES_FOUND", report "No issues to process" and STOP
-
-          2. Check if the vulnerability has already been fixed:
-             a. Read the affected files mentioned in the issue
-             b. Check if the vulnerable version is still present in dependency files
-             c. Check if the vulnerable code pattern still exists
-             d. Search for existing PRs that may have fixed this issue:
-                - Use github_list_pull_requests to find PRs with relevant keywords (CVE ID, package name)
-                - Check both open and merged PRs
-
-          3. If the issue is ALREADY FIXED:
-             - Identify the PR that fixed it (from git history or PR search)
-             - Write to /tmp/fix-status.json:
-               ```json
-               {
-                 "status": "ALREADY_FIXED",
-                 "issue_identifier": "SAF-123",
-                 "issue_id": "uuid",
-                 "pr_url": "https://github.com/owner/repo/pull/123",
-                 "pr_number": 123,
-                 "evidence": "Package upgraded to safe version in PR #123"
-               }
-               ```
-             - Report: "Issue already fixed by PR #[number]"
-
-          4. If the issue is NOT YET FIXED:
-             - Analyze the required fix:
-               - Determine fix type: dependency_upgrade, code_migration, config_change, code_replacement
-               - Identify files to modify
-               - Determine the target version or code change
-             - Write to /tmp/fix-status.json:
-               ```json
-               {
-                 "status": "NEEDS_FIX",
-                 "issue_identifier": "SAF-123",
-                 "issue_id": "uuid",
-                 "fix_type": "dependency_upgrade",
-                 "description": "Upgrade package-name from 1.2.3 to 1.2.4",
-                 "files_to_modify": ["go.mod", "go.sum"],
-                 "target_version": "1.2.4"
-               }
-               ```
-             - Report: "Issue needs fix: [description]"
-
-          GITHUB TOOLS:
-          - github_list_pull_requests: search for existing fix PRs
+          If NEEDS FIX:
+          - Determine fix type: dependency_upgrade, code_migration, config_change, or code_replacement
+          - Identify files to modify and target version
+          - Report: "Needs fix: [description]"
 
     - agent:
         prompt: |
-          You are a security engineer handling a vulnerability based on its fix status.
+          Handle the vulnerability based on fix status.
 
-          CONTEXT:
-          - Repository: {{repository_name}}
-          - Fix status is in /tmp/fix-status.json
-          - Selected issue is in /tmp/selected-issue.json
+          If ALREADY FIXED:
+          - Comment on Linear issue documenting the existing PR and evidence
+          - Report: "Linked existing PR to [identifier]"
+          - STOP (do not create new PR)
 
-          TASK:
-
-          1. Read /tmp/fix-status.json
-
-          2. If status is "ALREADY_FIXED":
-             a. Use create_comment on the Linear issue to document the existing fix:
-                ```
-                This vulnerability has already been fixed.
-
-                **PR:** [pr_url]
-                **Evidence:** [evidence from fix-status.json]
-
-                This issue can be closed.
-                ```
-             b. Write to /tmp/automation-result.json:
-                ```json
-                {
-                  "action": "LINKED_EXISTING_PR",
-                  "issue_identifier": "SAF-123",
-                  "pr_url": "https://github.com/...",
-                  "message": "Linked existing fix PR to Linear issue"
-                }
-                ```
-             c. Report: "Linked existing PR to issue [identifier]. Automation complete."
-             d. STOP HERE - do not proceed to further steps
-
-          3. If status is "NEEDS_FIX":
-             a. Implement the fix based on fix_type:
-                - For dependency_upgrade: Update version in dependency file, run update commands
-                - For code_migration: Update API calls to new interface
-                - For config_change: Update configuration files
-                - For code_replacement: Replace vulnerable code patterns
-             b. Verify the fix:
-                - Run tests if available
-                - Ensure build passes
-             c. Stage the changes with git add
-             d. Write to /tmp/automation-result.json:
-                ```json
-                {
-                  "action": "IMPLEMENTED_FIX",
-                  "issue_identifier": "SAF-123",
-                  "fix_description": "Upgraded package-name to 1.2.4",
-                  "files_modified": ["go.mod", "go.sum"],
-                  "tests_passed": true
-                }
-                ```
-             e. Report: "Implemented fix: [description]. Ready for PR."
-
-          LINEAR TOOLS:
-          - create_comment: document existing fix on Linear issue
+          If NEEDS FIX:
+          - Implement the fix (update dependencies, migrate code, etc.)
+          - Run tests if available
+          - Stage changes with git add
+          - Report: "Implemented: [description]"
 
     - pullRequest:
         branch: jonas/{{linear_issue_id}}-fix
-        description: |
-          Automated security fix by Ona Agent.
-
-          See /tmp/automation-result.json for details.
+        description: Automated security fix by Ona Agent.
         draft: false
         title: "fix: security vulnerability remediation"
 
     - agent:
         prompt: |
-          You are a security engineer documenting the completed fix.
+          Document the completed fix.
 
-          CONTEXT:
-          - A PR has been created with the security fix
-          - Result is in /tmp/automation-result.json
-          - Selected issue is in /tmp/selected-issue.json
+          If existing PR was linked (no new PR created):
+          - Report summary and STOP
 
-          TASK:
-
-          1. Read /tmp/automation-result.json
-
-          2. If action is "LINKED_EXISTING_PR":
-             - Report: "No new PR created. Existing fix was linked to the Linear issue."
-             - STOP HERE
-
-          3. If action is "IMPLEMENTED_FIX":
-             a. Use create_comment on the Linear issue:
-                ```
-                Fix implemented in new PR.
-
-                **Change:** [fix_description]
-                **Files modified:** [list of files]
-                **Tests:** [pass/fail]
-
-                Please review and merge the PR to resolve this issue.
-                ```
-             b. Generate summary report:
-                ```
-                ## Security Fix Summary
-
-                **Repository:** {{repository_name}}
-                **Issue:** [issue_identifier]
-                **Change:** [fix_description]
-
-                ### Files Modified
-                - [list files]
-
-                ### Verification
-                - Tests: [pass/fail]
-
-                ### Next Steps
-                - Review and merge the PR
-                - Close the Linear issue after verification
-                ```
-
-          LINEAR TOOLS:
-          - create_comment: document new fix on Linear issue
+          If new fix was implemented:
+          - Comment on Linear issue with: change description, files modified, test results
+          - Generate summary with repository, issue, changes, and next steps
 
     - report:
         outputs:
@@ -236,23 +77,18 @@ action:
             title: Action Taken
             string: {}
             prompt: |
-              What action was taken? (LINKED_EXISTING_PR, IMPLEMENTED_FIX, NO_ISSUES_FOUND)
-              Return ONLY the action type, nothing else.
+              Return ONLY: LINKED_EXISTING_PR, IMPLEMENTED_FIX, or NO_ISSUES_FOUND
           - key: issue_identifier
             title: Issue Processed
             string: {}
-            prompt: |
-              What is the Linear issue identifier that was processed (e.g., SAF-123)?
-              Return ONLY the identifier, or "none" if no issue was processed.
+            prompt: Return ONLY the Linear issue identifier, or "none"
           - key: fix_type
             title: Fix Type
             string: {}
             prompt: |
-              If a fix was implemented, what type? (dependency_upgrade, code_migration, config_change, code_replacement)
-              Return ONLY the fix type, or "n/a" if no fix was implemented.
+              Return ONLY: dependency_upgrade, code_migration, config_change, code_replacement, or "n/a"
           - key: files_modified
             title: Files Modified
             string: {}
             prompt: |
-              List the files that were modified to implement the fix.
-              Return ONLY a comma-separated list of file paths, or "none" if no files were modified.
+              Return ONLY comma-separated file paths, or "none"
