--- a/scan.yaml
+++ b/scan.yaml
@@ -1,5 +1,5 @@
 name: "[Jonas] Scan Repository"
-description: Runs security scanners (Trivy, OSV-Scanner) to find CVEs in Go, Java/Kotlin, and JS/TS codebases, then creates or updates Linear issues for high-priority findings
+description: Runs security scanners (Trivy, OSV-Scanner) to find vulnerabilities in Go, Java/Kotlin, JS/TS, and Python codebases, then creates or updates Linear issues for high-priority findings
 
 triggers:
   - manual: {}
@@ -49,125 +49,44 @@ action:
 
     - agent:
         prompt: |
-          You are a security engineer checking this repository against known CVE advisories.
+          Check this repository ({{repository_name}}) against open advisory issues.
 
-          CONTEXT:
-          - The CVE news feed automation creates "[Advisory]" issues in Linear team "Ona AI Security Engineer" with label "advisory"
-          - These advisories describe vulnerabilities that MAY affect repositories
-          - Your job is to check if THIS repository ({{repository_name}} at {{repository_url}}) is affected
-          - You must leave a comment on each advisory to record that this repo was scanned
-          - Comment marker format: "Scanned: {{repository_name}}" - this prevents duplicate scans
-          - If affected, write findings to /tmp/advisory-findings.json for the next step to process
+          1. List advisory issues: team "Ona AI Security Engineer", label "advisory"
 
-          TASK:
+          2. For each advisory (skip if comment contains "Scanned: {{repository_name}}"):
+             - Extract: advisory ID (CVE/GHSA/vendor), package, vulnerable versions
+             - Check dependency files (go.mod, package.json, pom.xml, build.gradle)
+             - Comment on advisory:
+               ```
+               Scanned: {{repository_name}}
+               Status: AFFECTED / NOT AFFECTED
+               Reason: [details]
+               ```
+             - If AFFECTED: write to /tmp/advisory-findings.json with advisory_issue_id, package, version, severity
 
-          1. Fetch all advisory issues from Linear:
-             - Use list_issues with team: "Ona AI Security Engineer", label: "advisory"
-             - These issues have titles starting with "[Advisory]"
-
-          2. For each advisory issue:
-             a. Read the issue's comments to check if this repo was already scanned
-                - Look for a comment containing "Scanned: {{repository_name}}"
-                - If found, SKIP this advisory (already processed)
-
-             b. If not yet scanned, analyze the advisory description to extract:
-                - CVE ID
-                - Affected package names and ecosystems
-                - Vulnerable version ranges
-                - Detection guidance (what to search for)
-
-             c. Check if this repository is affected:
-                - Search for the affected package in dependency files:
-                  - Go: go.mod, go.sum
-                  - JavaScript/TypeScript: package.json, package-lock.json, yarn.lock
-                  - Java/Kotlin: pom.xml, build.gradle, build.gradle.kts
-                - Check if the installed version falls within the vulnerable range
-                - Search for direct imports/usage of the affected package
-
-             d. Leave a comment on the advisory issue using create_comment:
-                - If NOT affected:
-                  ```
-                  Scanned: {{repository_name}}
-                  Status: NOT AFFECTED
-                  Reason: [Package not found / Version not vulnerable / Not applicable]
-                  ```
-                - If AFFECTED:
-                  ```
-                  Scanned: {{repository_name}}
-                  Status: AFFECTED
-                  Finding: [Brief description of how it's affected]
-                  ```
-                  (The finding issue link will be added by the next step)
-
-             e. If AFFECTED, append the finding to /tmp/advisory-findings.json:
-                - Write a JSON object with: cve_id, advisory_issue_id, package, installed_version, 
-                  vulnerable_range, fixed_version, severity, file_locations, remediation
-
-          3. After processing all advisories, ensure /tmp/advisory-findings.json exists (create empty array if no findings)
-
-          IMPORTANT:
-          - Always leave a comment on the advisory, even if not affected
-          - The comment MUST contain "Scanned: {{repository_name}}" for deduplication
-          - Write findings to /tmp/advisory-findings.json so the next step can create issues
-
-          LINEAR TOOLS:
-          - list_issues: fetch advisories (team: "Ona AI Security Engineer", label: "advisory")
-          - create_comment: record scan results on advisory issues
+          3. Ensure /tmp/advisory-findings.json exists (empty array if no findings)
 
     - agent:
         prompt: |
-          You are a security engineer processing vulnerability findings for a single repository.
+          Process vulnerability findings and create/update Linear issues.
 
-          CONTEXT:
-          - This automation runs once per repository across many repositories
-          - Each repository execution updates the same Linear issues in team "Ona AI Security Engineer"
-          - There should be ONE Linear issue per CVE/vulnerability per repository
-          - You are responsible for keeping each issue's description accurate and current
-          - Findings come from TWO sources:
-            1. Scanner results: /tmp/trivy-results.json and /tmp/osv-results.json
-            2. Advisory matches: /tmp/advisory-findings.json (if exists)
+          INPUTS:
+          - /tmp/trivy-results.json, /tmp/osv-results.json (scanner results)
+          - /tmp/advisory-findings.json (from previous step)
 
-          TASK:
+          FOR EACH HIGH/CRITICAL FINDING:
+          1. Search Linear team "Ona AI Security Engineer" for existing issue (advisory ID + repository name)
+          2. If exists: update description with current state, comment on changes
+          3. If new: create issue with label ["finding"]
+          4. For advisory-sourced findings: comment on advisory issue with link to finding
 
-          1. Read all findings from:
-             - /tmp/trivy-results.json (Trivy scanner results)
-             - /tmp/osv-results.json (OSV scanner results)
-             - /tmp/advisory-findings.json (advisory matches, may not exist or be empty)
-
-          2. Consolidate findings with severity HIGH or CRITICAL, noting for each:
-             - CVE ID (if available)
-             - Source: "trivy", "osv", or "advisory"
-             - Affected package and version
-             - File location(s) in the repository
-             - Severity level
-             - Vulnerability description
-             - Advisory issue ID (for advisory-sourced findings)
-
-          3. For each HIGH or CRITICAL finding:
-             a. Search Linear team "Ona AI Security Engineer" for an existing issue matching this CVE and repository using list_issues
-             b. If found:
-                - Compare current description against latest scan results
-                - Update the description to reflect CURRENT state only (remove outdated file locations, update versions)
-                - Use update_issue to replace the description with accurate, current information
-                - Use create_comment to document what changed (e.g., "Removed stale file path /old/path.go, added new location /new/path.go")
-             c. If not found:
-                - Use create_issue to create a new issue in team "Ona AI Security Engineer" with label: ["finding"]
-
-          4. For advisory-sourced findings that resulted in a new issue:
-             - Use create_comment on the ADVISORY issue (from advisory_issue_id) to add the finding issue link:
-               ```
-               Finding issue created: [issue identifier/link]
-               ```
-
-          ISSUE TITLE FORMAT:
-          - "[Finding] CVE-XXXX-XXXXX - {{repository_name}}" or
-          - "[Finding] package-name - {{repository_name}}"
+          ISSUE TITLE: "[Finding] <ID> - {{repository_name}}" (ID = CVE/GHSA/vendor or package name)
 
           ISSUE DESCRIPTION FORMAT:
           ```
           ## Vulnerability Details
           - **Repository:** {{repository_url}}
-          - **CVE:** CVE-XXXX-XXXXX (link to NVD if available)
+          - **Advisory ID:** CVE-XXXX-XXXXX / GHSA-XXXX / vendor ID (link if available)
           - **Severity:** HIGH or CRITICAL
           - **Affected Package:** package-name@version
           - **Source:** Trivy / OSV / Advisory
@@ -184,20 +103,7 @@ action:
           Last scanned: YYYY-MM-DD
           ```
 
-          IMPORTANT:
-          - When updating, REPLACE outdated information, do not append
-          - The description should always reflect the current scan state
-          - If a file location no longer has the vulnerability, remove it
-          - Always update the "Last scanned" timestamp
-          - For advisory findings, link back to the source advisory issue
-
-          If no HIGH or CRITICAL vulnerabilities are found from any source, report that the scan completed with no high-priority findings.
-
-          LINEAR TOOLS:
-          - list_issues: search existing issues (team: "Ona AI Security Engineer", query: CVE ID + repository name)
-          - create_issue: create new issues (team: "Ona AI Security Engineer")
-          - update_issue: update issue descriptions
-          - create_comment: document changes made, and link finding issues to advisories
+          When updating: replace outdated info, don't append. Always update "Last scanned" timestamp.
 
     - report:
         outputs:
@@ -243,9 +149,9 @@ action:
             prompt: |
               Count how many new finding issues were created from advisory matches.
               Return ONLY the integer count, nothing else.
-          - key: cve_list
-            title: All CVE IDs Found
+          - key: advisory_ids
+            title: All Advisory IDs Found
             string: {}
             prompt: |
-              List all CVE IDs found (from both scanners and advisory matches).
-              Return ONLY a comma-separated list of CVE IDs, or "none" if no CVEs found.
+              List all advisory IDs found (CVE, GHSA, or vendor IDs from scanners and advisory matches).
+              Return ONLY a comma-separated list, or "none" if none found.
